# sgp_computed

./: .gitignore  CMakeLists.txt  README.md
include/math/: MathFunctions.h
include/utils/: FileUtils.h  StringUtils.h
src/: main.cpp
src/math/: MathFunctions.cpp
src/utils/: FileUtils.cpp
